@@ -31,8 +31,8 @@ public:
   virtual void SetHeight(int iHeight);
   virtual void SetAlpha(DWORD dwAlpha);
   virtual void SetColourDiffuse(D3DCOLOR colour);
-  void SetLabel(const CStdString& strFontName, const wstring& strLabel, D3DCOLOR dwColor);
-  void SetLabel(const CStdString& strFontName, const CStdString& strLabel, D3DCOLOR dwColor);
+  void SetText(const wstring& strLabel);
+  void SetText(const CStdString& strLabel);
   const CStdString& GetTextureAltFocusName() const { return m_selectButton.GetTextureFocusName(); };
   const CStdString& GetTextureAltNoFocusName() const { return m_selectButton.GetTextureNoFocusName(); };
   int GetToggleSelect() const { return m_toggleSelect; };
